--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,3 +36,22 @@ main {
 .main-header__item a.active {
   color: #3e00a1;
 }
+.contact-form {
+  width: 30rem;
+  max-width: 90%;
+  margin: auto;
+  padding: 1rem;
+}
+.form-control {
+  margin: 1rem 0;
+}
+.form-control label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.form-control input {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+}
