--- a/views/add-product.html
+++ b/views/add-product.html
@@ -15,6 +15,7 @@
           <li class="main-header__item">
             <a href="/admin/add-product">Add Product</a>
           </li>
+          <li class="main-header__item"><a href="/contactus">Contact Us</a></li>
         </ul>
       </nav>
     </header>
