--- a/views/404.html
+++ b/views/404.html
@@ -14,6 +14,9 @@
           <li class="main-header__item">
             <a href="/admin/add-product">Add Product</a>
           </li>
+          <li class="main-header__item">
+            <a class="active" href="/contactus">Contact Us</a>
+          </li>
         </ul>
       </nav>
     </header>
